@@ -4,6 +4,7 @@ Change string->path-element and bytes->path-element to raise an
  exception for an empty [byte-]string argument
 Change path-replace-suffix to raise an excpetion when a path element
  would be made empty
+racket/runtime-path: added runtime-require
 
 Version 5.90.0.9
 Allow hash table chaperones and impersonators to support efficient
